ADD THEO for permission

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#FF212121</color>
     <color name="colorYellow">#FBC02D</color>
+    <color name="colorGrey">#BDBD</color>`
 </resources>
