--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         app:wheelRadius="match_parent" />
 
     <ImageView
+        android:id="@+id/cicle"
         android:src="@drawable/circle"
         android:layout_width="200dp"
         android:layout_height="200dp"
@@ -38,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:src="@drawable/ic_startbutton"
+            app:backgroundTint="@android:color/white"
             android:scaleType="center"/>
 
     </FrameLayout>
