--- a/podorunwear/src/main/res/layout/round_activity_main.xml
+++ b/podorunwear/src/main/res/layout/round_activity_main.xml
@@ -25,19 +25,33 @@
         android:layout_gravity="center">
 
         <TextView
+            android:id="@+id/bpm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:layout_gravity="center_horizontal"
+            android:text="0.00"
+            android:layout_weight="1"/>
+        <!--android:layout_gravity="top|center_horizontal"-->
+
+        <TextView
             android:id="@+id/counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
             android:textSize="24sp"
+            android:layout_weight="1"
             android:text="0.00"/>
+
 
         <Button
             android:id="@+id/button_io"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
+            android:layout_weight="1"
             android:text="Start"/>
     </FrameLayout>
 </FrameLayout>
